2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.AddIns/ServiceExtensionNode.cs,
	  MonoDevelop.Core.Execution/ProcessService.cs,
	  MonoDevelop.Core.addin.xml, MonoDevelop.Core.mdp, Makefile.am,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/AbstractService.cs,
	  MonoDevelop.Core/ServiceManager.cs,
	  MonoDevelop.Core/SystemAssemblyService.cs,
	  MonoDevelop.Core/IService.cs: Remove service APIs.

2008-09-16  Mike Kestner <mkestner@novell.com> 

	* MonoDevelop.Core.Execution/ProcessWrapper.cs: null check to avoid
	NREs.  Fixes #418650.

2008-09-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Serialization/XmlMapAttributeProvider.cs: Allow
	  chaining several serialization maps for a type.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Collections/ReadOnlyDictionary.cs,
	  MonoDevelop.Core.mdp, Makefile.am: Implemented new
	  ReadOnlyDictionary class.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Collections/Set.cs: The Add method now returns true
	  if the item was not already present. False otherwise.

2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Collections, MonoDevelop.Core.Collections/Set.cs,
	  MonoDevelop.Core.mdp, Makefile.am: Added Set collection.

2008-08-28  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Core.Execution/ExternalConsoleLocator.cs: Fix xterm launch string.

2008-08-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Serialization/ClassDataType.cs: Add missing null
	  check.

2008-08-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Serialization/ClassDataType.cs: When deserializing
	  nested properties, make sure the nesting element is not added as
	  unknown element unless it actually contains unknown properties.
	  Fixes bug #403847.

2008-08-13  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/XmlReadHelper.cs: Add stack trace to error message,