@@ -1,5 +1,11 @@
 2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 
 
+	* MonoDevelop.Core.mdp, Makefile.am,
+	  MonoDevelop.Core/GettextCatalog.cs, MonoDevelop.Core/Gettext.cs:
+	  Replaced GettextCatalog.
+
+2008-10-02  Michael Hutchinson <mhutchinson@novell.com> 
+
 	* MonoDevelop.Core.AddIns/ServiceExtensionNode.cs,
 	  MonoDevelop.Core.Execution/ProcessService.cs,
 	  MonoDevelop.Core.addin.xml, MonoDevelop.Core.mdp, Makefile.am,
